--- a/ModuloDois/API/semanaOnze/semanaOnze/appsettings.Development.json
+++ b/ModuloDois/API/semanaOnze/semanaOnze/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  //padrão de conexão com o sql
+  //varia o nome do projeto
+  "ConnectionStrings": {
+    "CONEXAO_BANCO": "Server=localhost\\SQLEXPRESS;Database=semanaOnze;Trusted_Connection=True;"
   }
 }
